 * Add fileTransfers to Tpy::ContactCapabilities
 * Add Capabilities roles to AccountsModelItem
 * Add ServiceNameRole to AccountsModel
 * Add method to remove contact in ContactModelItem
 * Add method to request or remove subscription in ContactModelItem
 * Add id and presence type roles to AbstractConversationModel
 * Added AccountForContactItem method to AccountsModel

Fixes:
 * Report the connection status reason using the Connection object if possible
 * On connection invalidated, emit the connection status changed signal to make sure the account model item is updated
 * Add constructor to Tpy::ContactCapabilities so it can be really used
 * Revert returning UTF-8 for the contact alias and status messages strings
 * WARNING: optimization of flat model proxy, dataChanged signal is not hierarchical anymore after we found out it was quite expensive. You need to do explicit hierarchical changes.
 * Added hierarchicalDataChanged signal to Tpy::AccountsModel for explicit signalling of changes in account data affecting contacts data (expensive)
 * When setting status and statusMessage on Tpy::AccountsModelItem do not clear the presence type
 * Do not remove contact when rejecting publication
 * Do not request subscription automatically when accepting publication of a contact
 * It should be possible to send messages with non-default type and flags
 * Make contact refresh methods private in AccountsModelItem
 * Fixed a crash when items are removed from TreeNode
 * Improved the way an AccountsModelItem is setup on startup

telepathy-qt4-yell 0.1.6 (2011-06-06)
======================================

The "don't call on your model contacts unless necessary" release

Fixes:
 * Make the account model item use the status of the Connection object instead of the account one
 * Change the alias and statusMessage roles of the contact model item to return UTF-8 instead of QString
   have it display correctly in QML with extended characters

telepathy-qt4-yell 0.1.5 (2011-05-26)