@@ -42,6 +42,21 @@ struct TELEPATHY_QT4_YELL_MODELS_NO_EXPORT TreeNode::Private
     TreeNode *mParent;
 };
 
+/**
+ * \class TreeNode
+ * \ingroup models
+ * \headerfile TelepathyQt4Yell/tree-node.h <TelepathyQt4Yell/TreeNode>
+ *
+ * \brief A tree of model items
+ *
+ * This class is not meant to be used directly, rather subclassed by your own model classes.
+ * Each tree node can have a parent and children nodes, so you can use it for hierarchical models,
+ * and the items can be of different types, as long as each type subclasses TreeNode.
+ */
+
+/**
+  * Construct a TreeNode object
+  */
 TreeNode::TreeNode()
     : mPriv(new Private())
 {
@@ -52,11 +67,17 @@ TreeNode::~TreeNode()
     delete mPriv;
 }
 
+/**
+  * Returns the item located at index
+  */
 TreeNode *TreeNode::childAt(int index) const
 {
     return mPriv->mChildren[index];
 }
 
+/**
+  * Add a child item to the tree
+  */
 void TreeNode::addChild(TreeNode *node)
 {
     // takes ownership of node
@@ -79,29 +100,48 @@ void TreeNode::addChild(TreeNode *node)
             SIGNAL(childrenRemoved(Tpy::TreeNode*,int,int)));
 }
 
+/**
+  * Returns the row index of the given node
+  */
 int TreeNode::indexOf(TreeNode *node) const {
     return mPriv->mChildren.indexOf(node);
 }
 
+/**
+  * Returns the number of children of this tree node
+  */
 int TreeNode::size() const {
     return mPriv->mChildren.size();
 }
 
+/**
+  * Returns the parent node of this tree node
+  */
 TreeNode *TreeNode::parent() const
 {
     return mPriv->mParent;
 }
 
+/**
+  * This is not used. It returns an empty QVariant
+  */
 QVariant TreeNode::data(int role) const
 {
     return QVariant();
 }
 
+/**
+  * This is not used. It always returns false
+  */
 bool TreeNode::setData(int role, const QVariant &value)
 {
     return false;
 }
 
+/**
+  * Remove this node from the tree. The node's signals are disconnected,
+  * its parent is called to remove it, and deleleLater is called.
+  */
 void TreeNode::remove()
 {
     if (mPriv->mParent) {
